<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/seashell"
        android:orientation="vertical"
        tools:context=".Fragmentos.IngresoFragment">

        <ImageView
            android:id="@+id/FotoIngreso_IV"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@mipmap/nombre" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NombreIngreso_TL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_txt" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/EncuestaIngreso1_CB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EncuestaIngreso1_TX"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/EncuestaIngreso2_CB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EncuestaIngreso2_TX"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/EncuestaIngreso3_CB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EncuestaIngreso4_TX"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EncuestaAbierta_TL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PreguntaIngreso_TX" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Ingresar_TB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brown"
            android:text="@string/ingresar_TX"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/EncuestaSalida1_CB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EncuestaSalida1_TX"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/EncuestaSalida2_CB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EncuestaSalida2_TX"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/EncuestaSalida3_CB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EncuestaSalida4_TX"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EncuestaAbiertaSalida_TL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PreguntaIngreso_TX" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Salida_TB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brown"
            android:text="@string/Salida_TX"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>