<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AgregarHorarioActivity">

        <CalendarView
            android:id="@+id/CalendarAgregarHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NombreIngresarHorario_TL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_txt" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inHoraEntrada_TL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HoraEntrada_TX" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inHoraSalida_TL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HoraSalida_TX" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/PublicarAgregarHorario_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brown"
            android:text="@string/Publicar_TX"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>