<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/AnunciosFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/AnunciosFragment"
        android:name="com.longasjulian.form_regis_lb1.Fragmentos.AnunciosFragment"
        android:label="@string/Anuncios_fragment_label"
        tools:layout="@layout/fragment_ingreso">

        <action
            android:id="@+id/action_AnunciosFragment_to_SecondFragment"
            app:destination="@id/HorarioFragment" />
    </fragment>
    <fragment
        android:id="@+id/HorarioFragment"
        android:name="com.longasjulian.form_regis_lb1.Fragmentos.HorarioFragment"
        android:label="@string/horarios_fragment_label"
        tools:layout="@layout/fragment_horario">

        <action
            android:id="@+id/action_HorarioFragment_to_FirstFragment"
            app:destination="@layout/fragment_ingreso" />
        <action
            android:id="@+id/action_HorarioFragment_to_ingresoFragment"
            app:destination="@id/ingresoFragment" />
    </fragment>
    <fragment
        android:id="@+id/ingresoFragment"
        android:name="com.longasjulian.form_regis_lb1.Fragmentos.IngresoFragment"
        android:label="@string/Ingreso_fragment_label"
        tools:layout="@layout/fragment_ingreso" >
        <action
            android:id="@+id/action_ingresoFragment_to_HorarioFragment"
            app:destination="@id/HorarioFragment" />
        <action
            android:id="@+id/action_ingresoFragment_to_HorarioFragment2"
            app:destination="@id/HorarioFragment" />
    </fragment>
</navigation>