<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="false"
        android:orientation="vertical"
        tools:context=".AgregarAnunciosActivity">

        <ImageView
            android:id="@+id/FotoAnuncios_TV"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TituloAnuncios_TL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TituloAnuncio_TX" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/MensajeAnuncios_TL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MensajeAnuncio_TX" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Publicar_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brown"
            android:text="@string/Publicar_TX"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>