<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/brown"
    android:padding="2dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NombreItemEJ_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textColor="@color/brown"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/architects_daughter"
                    android:text="@string/Correoitem_TX"
                    android:textColor="@color/brown"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/CorreoItemEJ_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="212dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/architects_daughter"
                    android:text="@string/Fecha_Nacimiento_TX"
                    android:textColor="@color/brown"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/FechaItemEJ_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/architects_daughter"
                    android:text="@string/Celular_txt"
                    android:textColor="@color/brown"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/CelularItemEJ_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/architects_daughter"
                    android:text="@string/Bancoitem_TX"
                    android:textColor="@color/brown"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/architects_daughter"
                    android:text="@string/NumeroCuentaItem_TX"
                    android:textColor="@color/brown"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/BancoItemEJ_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Celular_txt"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/CuentaItemEJ_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</FrameLayout>